--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+h1,
+h2,
+h3 {
+  font-family: var(--header-font), sans-serif;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -20,5 +26,4 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
