Added all pages, and fixed colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@ li {
   --headerColor-artikler: #43c0ff;
   --headerColor-kontakt: #ffcd43;
   --headerColor-guider: #ff6f43;
-  --headerColor-Om: #45cd4a;
+  --headerColor-om: #45cd4a;
 }
 
 @theme inline {
