Added main background color to body and header component with text to all pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@ li {
   --headerColor-kontakt: #ffcd43;
   --headerColor-guider: #ff6f43;
   --headerColor-om: #45cd4a;
+  --main-bg-color: #fffcf4;
 }
 
 @theme inline {
