--- a/app/globals.css
+++ b/app/globals.css
@@ -14,19 +14,28 @@ button {
 }
 
 .thisArticle p {
-  margin-bottom: 2.5rem;
-  line-height: 34px;
-  font-size: 18px;
+  margin-bottom: 2.2rem;
+  line-height: 30px;
+  font-size: 20px;
 }
 
 .thisArticle h2 {
-  font-size: clamp(1.5rem, 2.5vw, 2rem);
-  font-weight: bold;
-  margin: 10px 0px;
+  font-size: clamp(1.5rem, 1.5vw, 2rem);
+  font-weight: 600;
+  margin-bottom: 5px;
+  margin-top: 2em;
+}
+
+.thisArticle h3 {
+  font-size: clamp(1.3rem, 1.5vw, 1.5rem);
+  font-weight: 600;
+  margin-bottom: 5px;
+  margin-top: 1em;
 }
 
 .thisArticle h1 {
-  margin: 10px 0px;
+  font-weight: 600;
+  margin-top: 2rem;
 }
 
 span {
