--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,10 @@ button {
   font-size: 20px;
 }
 
+.sub-title {
+  font-family: var(--text-font);
+}
+
 .thisArticle h2 {
   font-size: clamp(1.5rem, 1.5vw, 2rem);
   font-weight: 600;
