--- a/app/globals.css
+++ b/app/globals.css
@@ -21,9 +21,8 @@ li {
 }
 
 .thisArticle p {
-  margin-bottom: 2.2rem;
-  line-height: 30px;
-  font-size: 20px;
+  margin-bottom: 1.5rem;
+  line-height: 1.6;
 }
 
 .sub-title {
@@ -33,7 +32,7 @@ li {
 .thisArticle h2 {
   font-size: clamp(1.5rem, 1.5vw, 2rem);
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
   margin-top: 2em;
 }
 
