Removed headerimage from articleId (dynamic route), changed img size in articles, and small changes in design

--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@ span {
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --headerColor-hjem: #dce4ff;
+  --headerColor-hjem: #ffe49a;
   --headerColor-artikler: #e4f6ff;
   --headerColor-kontakt: #fff4d6;
   --headerColor-guider: #ffe9e2;
